# api_petonlinestore

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
tests/: conftest.py
tests/integration/: test_pet_creation_and_update.py
tests/pet_endpoint/: test_get_pet.py  test_post_pet.py  test_put_pet.py
tests/pet_endpoit/: test_get_pet.py  test_post_pet.py  test_put_pet.py
